--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/wendygarcia84/bamazon-customer#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "inquirer": "^7.0.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "table": "^5.4.6"
   }
 }
